// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H4 component should accept additional props 1`] = `
<Text
  accessible={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Bold",
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
>
  "What you are is God's gift to you, what you become is your gift to God." ― Hans Urs von Balthasar
</Text>
`;

exports[`the H4 component should accept and render passed in styles 1`] = `
<Text
  style={
    Object {
      "color": "salmon",
      "fontFamily": "InterUI-Bold",
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H4 component should render a loading state 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 16,
      "height": 16,
      "marginVertical": 4,
      "width": "80%",
    }
  }
/>
`;

exports[`the H4 component should render a loading state with correct positioning (margins) 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 16,
      "height": 16,
      "marginBottom": 12,
      "marginTop": 15.84,
      "marginVertical": 4,
      "width": "80%",
    }
  }
/>
`;

exports[`the H4 component should render correctly 1`] = `
<Text
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Bold",
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
>
  Default H4 text
</Text>
`;

exports[`the H4 component should render with correct padding 1`] = `
<Text
  padded={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Bold",
      "fontSize": 16,
      "lineHeight": 24,
      "paddingBottom": 12,
      "paddingTop": 15.84,
    }
  }
>
  Padded H4 text
</Text>
`;
